--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -15,7 +15,10 @@
                 <td><%= student.email%></td>
                 <td><%= link_to 'View', student%>
                 <td><%= link_to 'Edit', edit_student_path(student) %></td>
-                <td><%= link_to 'Delete', student, method: :delete, data: { confirm: 'Are you Sure?'} %></td>
+                <td><%= link_to 'Delete', student, method: :delete, data:{
+                        turbo_method: :delete,
+                        turbo_confirm: "Are you sure"
+                    } %></td>
             </tr>
         <%end%>
     </tbody>
