--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -4,5 +4,8 @@
 <p><strong> Last Name: </strong><%= @student.last_name %></p>
 <p><strong> email: </strong><%= @student.email %></p>
 
-<%= link_to 'back', students_path %> | <%= link_to 'Edit', edit_student_path(@student) %>
-<%= link_to 'Delete', @student, method: :delete, data: { confirm: 'Are you Sure?'} %>
+<%= link_to 'back', students_path %> | <%= link_to 'Edit', edit_student_path(@student) %><br>
+<%= link_to 'Delete', @student, method: :delete, data:{
+        turbo_method: :delete,
+        turbo_confirm: "Are you sure"
+    } %>
